--- a/public/chat.html
+++ b/public/chat.html
@@ -49,6 +49,8 @@
          </div>
       </div>
 
+      <!-- Query string library -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.4/qs.min.js"></script>
       <!-- Bring in socket.io front end library for main.js-->
       <script src="/socket.io/socket.io.js"></script>
       <script src="js/main.js"></script>
